fix: use .toList() instead of collector
Since java 21.