@@ -10,7 +10,6 @@ import com.elvaco.mvp.database.entity.meter.LogicalMeterEntity;
 
 import lombok.RequiredArgsConstructor;
 
-import static java.util.stream.Collectors.toList;
 import static java.util.stream.Collectors.toSet;
 
 @RequiredArgsConstructor
@@ -31,13 +30,13 @@ public final class GatewayWithMetersMapper {
         .collect(toSet())))
       .statusLogs(entity.statusLogs.stream()
         .map(GatewayStatusLogEntityMapper::toDomainModel)
-        .collect(toList()))
+        .toList())
       .build();
   }
 
   private List<LogicalMeter> toLogicalMeters(Set<LogicalMeterEntity> meters) {
     return meters.stream()
       .map(logicalMeterEntityMapper::toDomainModel)
-      .collect(toList());
+      .toList();
   }
 }
