@@ -10,9 +10,6 @@ import com.elvaco.mvp.database.entity.user.UserEntity;
 
 import lombok.experimental.UtilityClass;
 
-import static java.util.stream.Collectors.toList;
-import static java.util.stream.Collectors.toUnmodifiableList;
-
 @UtilityClass
 public class UserEntityMapper {
 
@@ -43,12 +40,12 @@ public class UserEntityMapper {
   private static List<RoleEntity> rolesFrom(List<Role> roles) {
     return roles.stream()
       .map(r -> new RoleEntity(r.role))
-      .collect(toList());
+      .toList();
   }
 
   private static List<Role> rolesFrom(Collection<RoleEntity> roles) {
     return roles.stream()
       .map(r -> new Role(r.role))
-      .collect(toUnmodifiableList());
+      .toList();
   }
 }
